# csv2mysql

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  QUICKSTART.md  README.md  install.sh
.claude/: settings.local.json
configs/: default.toml  rol_cobro.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  loader.rs  parser.rs  proc_log.rs  retry.rs  schema.rs  types.rs  validator.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs
design/: plan_csv2mysql.md
examples/: rol_cobro_ejemplo.csv
migrations/: 0001_proceso_log.sql
