[workspace]
members = [
    "crates/core",
    "crates/tui",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SUPEREDUC Team"]
license = "MIT"
rust-version = "1.79"

[workspace.dependencies]
# Core logic
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
walkdir = "2.5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
    "migrate",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Config
config = "0.14"
