[package]
name = "csv2mysql-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
csv.workspace = true
walkdir.workspace = true
sha2.workspace = true
chrono.workspace = true
encoding_rs.workspace = true
tokio.workspace = true
futures.workspace = true
sqlx.workspace = true
tracing.workspace = true
config.workspace = true

[dev-dependencies]
tokio-test = "0.4"
