[package]
name = "csv2mysql-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "csv2mysql-tui"
path = "src/main.rs"

[dependencies]
csv2mysql-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
